...
    <!-- SettingsFragment -->
    <string name="button_settings_website">Bezoek de website</string>
    <string name="button_settings_darkmode">Donkere modus</string>
    <string name="button_settings_privacypolicy">Bekijk het privacybeleid</string>
    <string name="button_settings_suggestion">Verstuur een suggestie</string>
    <string name="button_settings_signout">Meld af</string>
    <string name="title_send_suggestion">Verstuur een suggestie</string>
    <string name="title_sign_out">Afmelden</string>
    <string name="message_send_suggestion">Vul hieronder uw suggestie in en druk op de knop \'Verzend\'.</string>
    <string name="message_sign_out">Bent u zeker dat u zich wilt afmelden?</string>
    <string name="send_suggestion_succes">Bedankt voor het verzenden van uw suggestie!</string>
    <string name="send_suggestion_error">Er is iets fout gegaan tijdens het versturen van uw suggestie.</string>
    <string name="send_suggestion_empty_error">Een lege suggestie kan niet worden verstuurd.</string>
    <string name="send_suggestion_hint">Typ hier uw suggestie…</string>

    <!-- ProfileFragment -->
    <string name="title_action_edit_profile">Wijzig profiel</string>
    <string name="title_action_stop_editing_profile">Stop met wijzigen profiel</string>
    <string name="placeholder_profile_fullname">Andy Droidon</string>
    <string name="description_profile_picture">Profielfoto van de gebruiker</string>
...
    <string name="label_change_password">Wachtwoord wijzigen? Klik hier!</string>
    <string name="label_copyright">Copyright © 2018 | Bram De Coninck</string>
    <string name="label_go_to_sign_in">Heb je al een account? Klik hier!</string>
    <string name="label_go_to_registration">Heb je nog geen account? Klik hier!</string>

    <!-- Dialogs -->
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nee</string>
    <string name="dialog_cancel">Annuleren</string>
    <string name="dialog_okay">Oké</string>
    <string name="dialog_send">Verzend</string>
    <string name="dialog_privacy_policy">Bekijk privacybeleid</string>

</resources>

