...
                    app:layout_constraintEnd_toEndOf="@+id/gl_settings_97"
                    app:layout_constraintStart_toStartOf="@+id/gl_settings_3"
                    app:layout_constraintTop_toBottomOf="@+id/tv_settings_appName"
                    app:layout_constraintBottom_toTopOf="@+id/lbl_settings_copyright">

                    <Button
                        android:id="@+id/btn_settings_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/form_field_rounded_background"
...
                        app:layout_constraintBottom_toBottomOf="@+id/btn_settings_website"
                        app:layout_constraintEnd_toEndOf="@+id/btn_settings_website"
                        app:layout_constraintTop_toTopOf="@+id/btn_settings_website"
                        tools:ignore="UnusedAttribute" />

                    <Button
                        android:id="@+id/btn_settings_darkmode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/form_field_rounded_background"
...
                        android:onClick="@{() -> settingsViewModel.toggleDarkMode()}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_settings_website" />

                    <Switch
                        android:id="@+id/switch_settings_darkmode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:checked="@{safeUnbox(settingsViewModel.isDarkModeEnabled)}"
                        android:onClick="@{() -> settingsViewModel.toggleDarkMode()}"
                        android:elevation="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/btn_settings_darkmode"
                        app:layout_constraintEnd_toEndOf="@+id/btn_settings_darkmode"
                        app:layout_constraintTop_toTopOf="@+id/btn_settings_darkmode"
                        tools:ignore="UnusedAttribute" />

                    <Button
                        android:id="@+id/btn_settings_privacypolicy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/form_field_rounded_background"
...
                        app:layout_constraintBottom_toBottomOf="@+id/btn_settings_privacypolicy"
                        app:layout_constraintEnd_toEndOf="@+id/btn_settings_privacypolicy"
                        app:layout_constraintTop_toTopOf="@+id/btn_settings_privacypolicy"
                        tools:ignore="UnusedAttribute" />

                    <Button
                        android:id="@+id/btn_settings_suggestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/form_field_rounded_background"
...
                        app:layout_constraintBottom_toBottomOf="@+id/btn_settings_suggestion"
                        app:layout_constraintEnd_toEndOf="@+id/btn_settings_suggestion"
                        app:layout_constraintTop_toTopOf="@+id/btn_settings_suggestion"
                        tools:ignore="UnusedAttribute" />

                    <Button
                        android:id="@+id/btn_settings_signout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
...
