...
    <item
        android:id="@+id/serviceListFragment"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/title_service_list_fragment"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings_fragment"/>

</menu>
